--- a/src/index.css
+++ b/src/index.css
@@ -31,12 +31,14 @@ body {
 
 .dailyEventView {
   position: relative;
-  left: 5rem;
-  height: 1.5rem;
-  width: 20rem;
-  padding: 5px 10px;
+  top: 2.56rem;
+  left: .5rem;
+  height: 1.2rem;
+  width: 10rem;
+  padding: 2px 10px;
+  margin-bottom: 8px;
   border-radius: 15px;
-  outline: 1px solid black;
+  outline: 1px solid #e2dfdf;
 }
 
 
@@ -162,4 +164,54 @@ body {
 .cancelBtn:hover {
   background: #e2dfdf;
   outline: none;
+}
+
+
+/* -- DAY STYLES -- */
+
+.indDayView {
+  position: relative;
+  left: 20rem;
+  top: 5rem;
+  height: 12rem;
+  width: 12rem;
+  outline: 1px solid #e2dfdf;
+  border-radius: 10px;
+}
+
+.name-numDayCntr {
+  position: relative;
+  top: .5rem;
+  height: 1.2rem;
+  padding: 2px 5px;
+  display: flex;
+  justify-content: space-between;
+  /* border: 1px solid black; */
+}
+
+.dayName {
+  position: relative;
+  top: -1rem;
+  height: 1.5rem;
+  letter-spacing: 1px;
+  padding: 0px 3px;
+  /* border: 1px solid red; */
+}
+
+.dayNum {
+  position: relative;
+  top: -1rem;
+  height: 1.5rem;
+  padding: 0px 3px;
+}
+
+.extraEvents {
+  position: relative;
+  left: 9.5rem;
+  top: 2rem;
+  width: 1.5rem;
+  font-size: 16px;
+  padding: 2px 5px;
+  border: 1px solid #e2dfdf;
+  border-radius: 10px;
 }
