--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,90 @@ body {
   margin-left: 5rem;
   font-family: Prompt;
   color: #333333;
+  display: flex;
   /* border: 1px solid #e2dfdf; */
   border: 1px solid black;
   border-radius: 10px;
 }
+
+/* -- MAIN CALENDAR STYLES -- */
+
+.calendarView {
+  position: relative;
+  /* top: 2rem; */
+  /* right: 4.5rem; */
+  height: 65rem;
+  width: 85rem;
+  border-left: 1px solid black;
+}
+
+.month-yearHeadingCntr {
+  position: relative;
+  top: 5rem;
+  left: 1rem;
+  height: 6rem;
+  width: 45rem;
+  font-family: 'Saira';
+  font-size: 2rem;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #e2dfdf;
+}
+
+.monthHeading {
+  position: relative;
+  bottom: 1rem;
+  left: 1rem;
+  height: 5rem;
+  letter-spacing: 15px;
+  padding: 5px 12px; 
+}
+
+.yearHeading {
+  position: relative;
+  bottom: 1rem;
+  right: 6rem;
+  height: 5rem;
+  letter-spacing: 15px;
+  padding: 5px 12px;
+}
+
+.setDateInput {
+  position: relative;
+  top: 1.78em;
+  left: 65rem;
+  height: 2rem;
+  /* width: 12rem; */
+  font-size: 20px;
+  padding: 5px 10px;
+  border-radius: 10px;
+}
+
+.setDateInput:focus {
+  outline: none;
+}
+
+.mainCalendarCntr {
+  position: relative;
+  top: 3.2rem;
+  left: 1rem;
+  height: 51rem;
+  width: 82.4rem;
+  display: flex;
+  border: 1px solid #e2dfdf;
+  border-radius: 10px;
+  overflow-y: contain;
+}
+/* <div className='calendarView'>
+        <div className='month-yearHeadingCntr'>
+          <h2 className='monthHeading'>June</h2>
+          <h2 className='yearHeading'>2021</h2>
+        </div>
+
+        <div className='mainCalendarCntr'>
+
+        </div> */
 
 /* -- EVENT VIEW STYLES -- */
 
@@ -24,7 +104,6 @@ body {
   left: -3px;
   height: 65rem;
   width: 25rem;
-  border: 1px solid red;
   border-radius: 10px 0px 0px 10px;
 }
 
@@ -208,11 +287,9 @@ body {
 
 .indDayView {
   position: relative;
-  left: 20rem;
-  top: 5rem;
   height: 12rem;
   width: 12rem;
-  margin-bottom: 15px;
+  margin: 15px;
   outline: 1px solid #e2dfdf;
   border-radius: 10px;
 }
