--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@ body {
 }
 
 .container {
-  height: 65rem;
-  width: 110rem;
+  height: 40rem;
+  width: 80rem;
   margin: 2rem;
   margin-left: 5rem;
   font-family: Prompt;
@@ -23,19 +23,18 @@ body {
   position: relative;
   /* top: 2rem; */
   /* right: 4.5rem; */
-  height: 65rem;
-  width: 85rem;
+  height: 40rem;
+  width: 80rem;
   border-left: 1px solid black;
 }
 
 .month-yearHeadingCntr {
   position: relative;
-  top: 5rem;
   left: 1rem;
-  height: 6rem;
-  width: 45rem;
+  height: 5rem;
+  width: 35rem;
   font-family: 'Saira';
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-transform: uppercase;
   display: flex;
   justify-content: space-between;
@@ -44,7 +43,7 @@ body {
 
 .monthHeading {
   position: relative;
-  bottom: 1rem;
+  bottom: .5rem;
   left: 1rem;
   height: 5rem;
   letter-spacing: 15px;
@@ -53,20 +52,21 @@ body {
 
 .yearHeading {
   position: relative;
-  bottom: 1rem;
+  bottom: .5rem;
   right: 6rem;
   height: 5rem;
   letter-spacing: 15px;
   padding: 5px 12px;
+  /* outline: 1px solid red; */
 }
 
 .setDateInput {
   position: relative;
-  top: 1.78em;
-  left: 65rem;
-  height: 2rem;
+  top: -2rem;
+  left: 45rem;
+  height: .8rem;
   /* width: 12rem; */
-  font-size: 20px;
+  font-size: 15px;
   padding: 5px 10px;
   border-radius: 10px;
 }
@@ -77,50 +77,48 @@ body {
 
 .mainCalendarCntr {
   position: relative;
-  top: 3.2rem;
-  left: 1rem;
-  height: 51rem;
-  width: 82.4rem;
+  top: -1rem;
+  left: .5rem;
+  height: 32rem;
+  width: 59rem;
   display: flex;
+  padding: 10px;
+  padding-right: 0px;
   border: 1px solid #e2dfdf;
   border-radius: 10px;
-  overflow-y: contain;
+  overflow-y: auto;
+  display: grid;
+  grid-template-columns: repeat(7, 8.4rem);
+  grid-row-gap: 5px;
 }
-/* <div className='calendarView'>
-        <div className='month-yearHeadingCntr'>
-          <h2 className='monthHeading'>June</h2>
-          <h2 className='yearHeading'>2021</h2>
-        </div>
 
-        <div className='mainCalendarCntr'>
-
-        </div> */
 
 /* -- EVENT VIEW STYLES -- */
 
 .eventsView {
   position: relative;
-  top: -2px;
-  left: -3px;
-  height: 65rem;
+  height: 40.2rem;
   width: 25rem;
+  /* outline: 1px solid red; */
   border-radius: 10px 0px 0px 10px;
 }
 
 .eventsViewHeading {
   position: relative;
-  bottom: 2rem;
+  bottom: 1.2rem;
   font-family: 'Saira';
-  font-size: 3rem;
+  font-size: 1.8rem;
   letter-spacing: 10px;
   text-transform: uppercase;
   text-align: center;
+  /* outline: 1px solid green; */
 }
 
 .indEventCntr {
   position: relative;
   top: .5rem;
-  height: 50rem;
+  height: 30.8rem;
+  /* outline: 1px solid green; */
   overflow-y: hidden;
 }
 
@@ -128,10 +126,10 @@ body {
 
 .indEventView {
   position: relative;
-  left: .5rem;
+  left: 1rem;
   top: 2rem;
-  height: 1.5rem;
-  width: 22.8rem;
+  height: 1.2rem;
+  width: 16rem;
   padding: 5px 10px;
   margin-bottom: 10px;
   border-radius: 10px;
@@ -287,11 +285,11 @@ body {
 
 .indDayView {
   position: relative;
-  height: 12rem;
-  width: 12rem;
-  margin: 15px;
+  height: 6rem;
+  width: 8rem;
+  margin-left: 0px;
   outline: 1px solid #e2dfdf;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .name-numDayCntr {
