--- a/src/index.css
+++ b/src/index.css
@@ -145,12 +145,13 @@ body {
 
 .dailyEventView {
   position: relative;
-  top: 2.56rem;
-  left: .5rem;
-  height: 1.2rem;
-  width: 10rem;
-  padding: 2px 10px;
-  margin-bottom: 8px;
+  top: 1.2rem;
+  left: .3rem;
+  height: .7rem;
+  width: 6.5rem;
+  font-size: 8px;
+  padding: 2px 8px;
+  margin-bottom: 5px;
   border-radius: 15px;
   outline: 1px solid #e2dfdf;
 }
@@ -287,7 +288,6 @@ body {
   position: relative;
   height: 6rem;
   width: 8rem;
-  margin-left: 0px;
   outline: 1px solid #e2dfdf;
   border-radius: 5px;
 }
@@ -295,7 +295,7 @@ body {
 .name-numDayCntr {
   position: relative;
   top: .5rem;
-  height: 1.2rem;
+  height: .8rem;
   padding: 2px 5px;
   display: flex;
   justify-content: space-between;
@@ -306,6 +306,7 @@ body {
   position: relative;
   top: -1rem;
   height: 1.5rem;
+  font-size: 12px;
   letter-spacing: 1px;
   padding: 0px 3px;
   /* border: 1px solid red; */
@@ -315,16 +316,17 @@ body {
   position: relative;
   top: -1rem;
   height: 1.5rem;
+  font-size: 12px;
   padding: 0px 3px;
 }
 
 .extraEvents {
   position: relative;
-  left: 9.5rem;
-  top: 2rem;
-  width: 1.5rem;
-  font-size: 16px;
-  padding: 2px 5px;
+  left: 5.9rem;
+  top: 15px;
+  width: .8rem;
+  font-size: 8px;
+  padding: 2px 8px;
   border: 1px solid #e2dfdf;
   border-radius: 10px;
 }
