--- a/src/index.css
+++ b/src/index.css
@@ -253,6 +253,8 @@ body {
   top: 2rem;
   height: 1.2rem;
   width: 16rem;
+  display: flex;
+  justify-content: space-between;
   padding: 5px 10px;
   margin-bottom: 10px;
   border-radius: 10px;
@@ -263,6 +265,42 @@ body {
 .indEventView:hover {
   background: #e2dfdf;
 }
+
+.indEventHeading {
+  position: relative;
+  bottom: 18px;
+  right: 2px;
+  height: 20px;
+  width: 12rem;
+  padding: 1px 5px;
+  /* outline: 1px solid #e2dfdf; */
+}
+
+.editBtn {
+  position: relative;
+  right: .1rem;
+  cursor: pointer;
+}
+
+.deleteBtn {
+  position: relative;
+  bottom: 1.2rem;
+  left: 5px;
+  /* height: 1rem; */
+  width: 1rem;
+  padding: 1px 1px;
+  text-align: center;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.deleteBtn:hover {
+  color: #7777;
+}
+/*    <p className='indEventHeading'>Sample Event 1</p>
+            <img className='editBtn' src={EditIcon} alt='Edit Button' />
+            <p className='deleteBtn'>X</p>
+        </div> */
 
 /* -- DAILY EVENTS STYLES -- */
 
@@ -283,17 +321,18 @@ body {
 /* -- EDIT EVENT STYLES -- */
 
 .editEventContainer {
-  position: relative;
-  right: 30rem;
+  position: absolute;
+  right: 35rem;
   top: 15rem;
   height: 15rem;
-  width: 30rem;
+  width: 17.5rem;
   padding: 5px 10px;
   display: flex;
   flex-direction: column;
   border-radius:  5px;
   border: 1px solid black;
   background: #ffffff;
+  z-index: 1;
 }
 
 .editEventHeading {
