Gave functionality for AddEvent btn and deleteBtn
- When clicking the confirm button within the AddEvent view a new event will be added into the testEvents state and a new IndEvent will be created.
- When clicking the deleteBtn a copy of the testEvents state will be created. Then a filter function will be used to return all of the events which names are not equal to the name value of the deleteBtn.

--- a/src/index.css
+++ b/src/index.css
@@ -163,7 +163,7 @@ body {
 }
 
 .nameAddEvent:focus {
-  outline: none;
+  outline: 1px solid #e2dfdf;
 }
 
 .date-typeCntrAdd {
@@ -398,10 +398,6 @@ body {
 .deleteBtn:hover {
   color: #7777;
 }
-/*    <p className='indEventHeading'>Sample Event 1</p>
-            <img className='editBtn' src={EditIcon} alt='Edit Button' />
-            <p className='deleteBtn'>X</p>
-        </div> */
 
 /* -- DAILY EVENTS STYLES -- */
 
