--- a/src/index.css
+++ b/src/index.css
@@ -44,20 +44,21 @@ body {
 .monthHeading {
   position: relative;
   bottom: .5rem;
-  left: 1rem;
+  left: .8rem;
   height: 5rem;
-  letter-spacing: 15px;
+  letter-spacing: 10px;
   padding: 5px 12px; 
+  /* outline: 1px solid #e2dfdf; */
 }
 
 .yearHeading {
   position: relative;
   bottom: .5rem;
-  right: 6rem;
+  right: 1rem;
   height: 5rem;
   letter-spacing: 15px;
   padding: 5px 12px;
-  /* outline: 1px solid red; */
+  /* outline: 1px solid rgba(120, 120, 89, 1); */
 }
 
 .setDateInput {
