Fixed small issue with local and session storage
- Fixed small problem with local and session storage when opening up application.
- Since session storage only stays while the application is opened it had to be change to local storage

--- a/src/index.css
+++ b/src/index.css
@@ -374,6 +374,10 @@ body {
   padding: 1px 5px;
 }
 
+.indEventHeading:hover {
+  text-decoration: underline;
+}
+
 .editBtn {
   position: relative;
   right: .1rem;
